samples/_failures_safe/1761427598_3b93a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_985e2707.c: In function ‘main’:
./samples/SAFE/__tmp_985e2707.c:156:26: error: missing terminating " character
  156 |     mat2.cols = read_int("Enter number of
      |                          ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_985e2707.c:156:5: error: expected expression at end of input
  156 |     mat2.cols = read_int("Enter number of
      |     ^~~~
./samples/SAFE/__tmp_985e2707.c:156:17: error: too few arguments to function ‘read_int’
  156 |     mat2.cols = read_int("Enter number of
      |                 ^~~~~~~~
./samples/SAFE/__tmp_985e2707.c:20:5: note: declared here
   20 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_985e2707.c:156:5: error: expected declaration or statement at end of input
  156 |     mat2.cols = read_int("Enter number of
      |     ^~~~
